test/tests/stages/17_supporting_dynamic_memory_allocation/invalid_types/extra_credit/compound_void_rval_add.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[2]: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: f
        List[0]: 
        CB: 
          List[1]: 
            CS: 
              CReturn: 
                None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Void: 
        None: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: main
        List[0]: 
        CB: 
          List[3]: 
            CD: 
              CVarDecl: 
                CVariableDeclaration: 
                  TIdentifier: x
                  CSingleInit: 
                    CConstant: 
                      CConstInt: 
                        TInt: 0
                      None: 
                    None: 
                  Pointer: 
                    Int: 
                  None: 
            CS: 
              CExpression: 
                CAssignment: 
                  None: 
                  None: 
                  CBinary: 
                    CAdd: 
                    CVar: 
                      TIdentifier: x
                      None: 
                    CFunctionCall: 
                      TIdentifier: f
                      List[0]: 
                      None: 
                    None: 
                  None: 
            CS: 
              CReturn: 
                CConstant: 
                  CConstInt: 
                    TInt: 0
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
